--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
               %li=link_to "services", :services
               %li=link_to "portfolio", :portfolio
               %li=link_to "about", :about
-              %li=link_to "blog", :blog
+              %li=link_to "blog", :posts
       #content-wrapper
         %section#content
           = yield
