adds ability to save blog posts

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,3 +1,6 @@
 %section.primary
   %h2 Admin Dashboard
-  %h3 Coming Soon...
+
+  %nav#admin
+    %ul
+      %li=link_to "New Blog Post", :new_post
