--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,3 +1,4 @@
 %section.primary
   %h2 Blog
-  %h3 Coming Soon...
+  - @posts.each do |post|
+    = render :partial => "post", :locals => {:post => post }
