styles for syntax highlighting

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,7 @@
   %head
     %title Coshx Labs
     %meta{:name => "google-site-verification", :content => "GG9HzTQhQZszRRYo-W_el_Dh1LQs-3SQOuCzZS88FvI"}
-    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
-    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Syncopate"
+    = render "layouts/fonts"
     = stylesheet_link_tag "application"
     %link{:rel => "shortcut icon", :href => "logo.ico"}
     = javascript_include_tag "application"
