--- a/app/assets/stylesheets/code_blocks.css.scss
+++ b/app/assets/stylesheets/code_blocks.css.scss
@@ -2,8 +2,14 @@
 
 .post-body > pre {
     background-color: $gray;
-    padding: 5px 10px;
+    padding: 10px 20px;
     margin: 10px 0;
+    @include border-radius(5px);
+    @include box-shadow(black 1px 1px 6px inset);
+}
+
+.post-body pre {
+    @include code-text;
 }
 
 .hll { background-color: yellow }
