--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,4 +1,4 @@
 %h3=post.title
 .post-author=post.author.name
-.post-date=post.date.strftime("%B %e, %Y")
+.post-date=post.created_at.strftime("%B %e, %Y")
 .post-body=preserve post.body_html.html_safe
