--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,4 @@
 %section.primary
   %h2 Blog
   - @posts.each do |post|
-    = render :partial => "post", :locals => {:post => post }
+    = render :partial => "post", :locals => {:post => post, :preview => true }
