adds ability to view individual blog posts in detail

--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,4 +1,8 @@
-%h3=post.title
+%h3
+  -if preview
+    =link_to post.title, post
+  -else
+    =post.title
 .post-author=post.author.name
 .post-date=post.created_at.strftime("%B %e, %Y")
 - if preview
