--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,3 +2,4 @@
   %h2 Blog
   - @posts.each do |post|
     = render :partial => "post", :locals => {:post => post, :preview => true }
+    =link_to "Read More", post
