--- a/app/views/home/portfolio.html.haml
+++ b/app/views/home/portfolio.html.haml
@@ -1,3 +1,25 @@
 %section.primary
   %h2 Portfolio
-  %h3 Coming Soon...
+  %h3 We love our clients and do whatever it takes to make them successful. Here's a sampling of some people we've been fortunate enough to work with.
+
+  %ul
+    - @clients.each do |client|
+      %li.stretch-container
+        .stretch-small-offset
+          .client-logo
+            = image_tag "client_logos/#{client.company_logo}"
+          .client-name
+            = client.name
+          .client-url
+            = link_to client.site_url
+          - if client.quote
+            .client-quote
+              「
+              = client.quote
+              」
+            .client-quote-sayer
+              = "- #{client.quoted_person}"
+          - else
+            .what-we-did
+              = client.what_we_did
+
