--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -150,7 +150,7 @@ section#activity-stream {
 // Taken from the stretching example on Compass' website - http://compass-style.org/examples/compass/layout/stretching/
 .stretch-container {
   width: 380px;
-  height: 300px;
+  height: 320px;
   position: relative;
   @include inline-block; }
 
@@ -163,7 +163,8 @@ section#activity-stream {
   color: white;
   text-align: center;
   vertical-align: middle;
-  padding: 0.5em; }
+  padding: 0.5em;
+ }
 
 .stretch-full {
   @extend .stretched;
@@ -190,12 +191,12 @@ section#activity-stream {
   text-align: left;
   margin-left: 5px;
   margin-top: 10px;
+  font-size: 14px;
 }
 
 .client-name {
   @extend .client-info;
-  margin-top: 15px;
-  text-transform: uppercase;
+  margin-top: 10px;
   font-style: italic;
 }
 
@@ -203,7 +204,7 @@ section#activity-stream {
   @extend .client-info;
 }
 
-.client-quote {
+.client-quote, .what-we-did {
   @extend .client-info;
 }
 
@@ -211,4 +212,13 @@ section#activity-stream {
   @extend .client-info;
   margin-left: 35px;
   font-style: italic;
+}
+
+.client-logo {
+  height: 115px;
+}
+
+.client-logo img {
+  background-color: white;
+  @include border-radius(8px);
 }
