--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,4 +1,6 @@
 %section.primary
-  %h2 New Blog Post
+  %h1 Editing Post
   = render 'form'
+  = link_to 'Show', @post
+  \|
   = link_to 'Back', posts_path
