--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,4 +2,6 @@
   %h2 Blog
   - @posts.each do |post|
     = render :partial => "post", :locals => {:post => post, :preview => true }
-    =link_to "Read More", post
+    = link_to "Read More", post
+    - if admin_signed_in?
+      = link_to "Edit", edit_post_path(post)
