--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -4,4 +4,6 @@
     = render :partial => "post", :locals => {:post => post, :preview => true }
     = link_to "Read More", post
     - if admin_signed_in?
-      = link_to "Edit", edit_post_path(post)
+      .post-admin
+        = link_to "Edit", edit_post_path(post)
+        = link_to("Publish", publish_post_path(post), :method => :put) unless post.published?
