blog body and header formatting

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -146,7 +146,7 @@ $feature-height: 450px;
 @mixin article-text {
     font-family: Arimo;
     font-size: 16px;
-    color: $silver;
+    color: white;
     line-height: 1.5em;
     font-weight: normal;
 }
