--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -11,23 +11,43 @@ section.primary {
         padding-top: 0px;
         height: auto;
     }
+    .post-author-image {
+      display: block;
+      float: left;
+      margin-right: 20px;
+    }
+    .post-info-wrapper, .post-info {
+      display: block;
+      height: 50px;
+    }
+
+    .post-info-wrapper { margin-bottom: 10px; }
+
+    .post-info {
+      margin-left: 20px;
+      font-size: 20px;
+      line-height: 1.2;
+    }
+    .post-body {
+        p {
+            @include article-text;
+            margin-bottom: 10px;
+        }
+        hr {
+            border: 5px solid $light-gray;
+            border-style: none;
+        }
+        .meta {
+            @include meta-text;
+        }
+
+        em {
+          font-weight: bolder;
+        }
+    }
 }
 
 section.secondary {
     @include column(4, true);
     h3 { text-align: center; }
-}
-
-.post {
-    p {
-        @include article-text;
-        margin-bottom: 25px;
-    }
-    hr {
-        border: 5px solid $light-gray;
-        border-style: none;
-    }
-    .meta {
-        @include meta-text;
-    }
 }
