--- a/app/assets/stylesheets/code_blocks.css.scss
+++ b/app/assets/stylesheets/code_blocks.css.scss
@@ -4,6 +4,7 @@
     background-color: $gray;
     padding: 10px 20px;
     margin: 10px 0;
+    overflow-x: auto;
     @include border-radius(5px);
     @include box-shadow(black 1px 1px 6px inset);
 }
