--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -7,11 +7,12 @@
   .post-author-image=image_tag Gravatar.new(post.author.email).image_url(:size => '50')
   .post-info
     =post.author.name
+    %br
     - if post.published?
       %em=post.posted_on.strftime("%B %e, %Y")
     - else
       %em="Draft"
 - if preview
-  .post-body=preserve truncate(post.body_html.html_safe, :length => 310)
+  .post-body=preserve post.preview_html.html_safe
 - else
   .post-body=preserve post.body_html.html_safe
