--- a/app/views/home/portfolio.html.haml
+++ b/app/views/home/portfolio.html.haml
@@ -9,7 +9,7 @@
           .client-logo
             = image_tag "client_logos/#{client.company_logo}"
           .client-name
-            = link_to client.site_url, client.name
+            = link_to client.name, client.site_url
           - if client.quote
             .client-quote
               「
