add a few extra services, tweak the way they're laid out, use a sort_order attribute to make sure they line up (key to the current layout working), make the font slightly easier to read on the page (just a little lighter)

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -6,7 +6,7 @@ $blueprint-grid-margin: 10px;
 @import "blueprint/grid";
 
 $gray: #38383A;
-$light-gray: #77777b;
+$light-gray: #97979b;
 $medium-gray: #525357;
 
 $blue: #659dff;
@@ -16,7 +16,7 @@ $purple: #c64791;
 $light-orange: #f47123;
 $dark-orange: #f05325;
 
-$silver: #bbbdbf;
+$silver: #c1c5c9;
 $gold: #d6c29c;
 
 $header-height: 101px;
