--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     = render "layouts/google_analytics"
+    = auto_discovery_link_tag :atom, "/feed"
   %body
     %section#content-canvas
       #header-wrapper
