--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,3 +1,5 @@
 %section.primary
   %h2 Blog
   = render :partial => "post", :locals => {:post => @post, :preview => false }
+  %section#comments
+    = render :partial => "comments"
