sets up disqus account for staging

--- a/app/views/posts/_comments.html.haml
+++ b/app/views/posts/_comments.html.haml
@@ -1,6 +1,6 @@
 #disqus_thread
 :javascript
-  var disqus_shortname = 'coshxlabs'; // required: replace example with your forum shortname
+  var disqus_shortname = '#{ENV['DISQUS_SHORTNAME'] || 'coshxlabsstaging'}'; // required: replace example with your forum shortname
   (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
       dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
