--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -2,6 +2,7 @@
   %ul
     %li=link_to "Dashboard", admin_root_path
     %li=link_to "New Blog Post", new_post_path
+    %li=link_to "New Job Posting", new_job_path
   %span.status
     Signed in as
     = current_admin.name
