--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @post, :html => { :id => "new-post" } do |f|
+= form_for @post, :html => { :class => "internal" } do |f|
   -if @post.errors.any?
     #error_explanation
       %h2= "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:"
