--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -19,6 +19,7 @@
     %p
       Interested in working at Coshx?
       %br
-      Shoot us an email showing us what you're interested in, what you've accomplished, and why you want to join our team.
-      %br
-      = link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
+      = link_to "View Openings", jobs_path
+      -#Shoot us an email showing us what you're interested in, what you've accomplished, and why you want to join our team.
+      -#%br
+      -#= link_to "jobs@coshx.com", "mailto:jobs@coshx.com"
