width: 700px for about and blog posts

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -2,7 +2,7 @@
   %h2 About Us
   %h3 We're a distributed team of people passionate about software. Here's a little more about each of us.
 
-  %section#coshx-folks
+  %section#coshx-folks.wall-of-text
     %ul.team-members
       - @coshx_folks.each do |person|
         %li.team-member
