--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,4 @@
-%section.primary
+%section.primary.wall-of-text
   %h2 Blog
   = render :partial => "post", :locals => {:post => @post, :preview => false }
   %section#comments
