--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,9 +2,10 @@
 %section.primary
   %h2 Blog
   - @posts.each do |post|
-    = render :partial => "post", :locals => {:post => post, :preview => true }
-    = link_to "Read More", post
-    - if admin_signed_in?
-      .post-admin
-        = link_to "Edit", edit_post_path(post)
-        = link_to("Publish", publish_post_path(post), :method => :put) unless post.published?
+    .wall-of-text
+      = render :partial => "post", :locals => {:post => post, :preview => true }
+      = link_to "Read More", post
+      - if admin_signed_in?
+        .post-admin
+          = link_to "Edit", edit_post_path(post)
+          = link_to("Publish", publish_post_path(post), :method => :put) unless post.published?
