Simplifies /blog routes
- Avoid using `resources :posts, :path => '/blog'` as it confused
the form helper for new posts
- Only needs one rule for full blog index and filtered by year,
  month, day
- show_post_path makes more sense than show_posts_path when
talking about a single post

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,4 +5,4 @@
       %li=link_to "services", :services
       %li=link_to "portfolio", :portfolio
       %li=link_to "about", :about
-      %li=link_to "blog", :posts
+      %li=link_to "blog", :blog_posts
