patch styles so you can read blog posts

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -4,6 +4,9 @@
     @include column(2);
 }
 
+body.default section.primary.wall-of-text {
+  width: 750px;
+}
 
 section.primary {
     .post-author-image {
