--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,3 +1,4 @@
+=provide(:title, @post.title.mb_chars.capitalize.to_s)
 %section.primary.wall-of-text
   %h2 Blog
   = render :partial => "post", :locals => {:post => @post, :preview => false }
