--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,18 +1,23 @@
-%h3
-  -if preview
-    =link_to post.title, blog_post_path(post)
-  -else
-    =post.title
-.post-info-wrapper
-  .post-author-image=image_tag Gravatar.new(post.author.email).image_url(:size => '50')
-  .post-info
-    =post.author.name
-    %br
+%div{:class => 'vcard'}
+  %h3
+    -if preview
+      =link_to post.title, blog_post_path(post)
+    -else
+      =post.title
+  %div{:class => 'title'}
     - if post.published?
       %em=post.posted_on.strftime("%B %e, %Y")
     - else
       %em="Draft"
-- if preview
-  .post-body=preserve post.preview_html.html_safe
-- else
-  .post-body=preserve post.body_html.html_safe
+  %br
+  .post-info-wrapper
+    .post-author-image=image_tag Gravatar.new(post.author.email).image_url(:size => '50'), :class => 'photo'
+    .post-info
+      %div{:class =>'fn'}
+        = post.author.name
+      %div{:class =>'org'}
+        Coshx Labs
+  - if preview
+    .post-body=preserve post.preview_html.html_safe
+  - else
+    .post-body=preserve post.body_html.html_safe
