allows for optional blog url to be attached to job posting

--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -27,6 +27,9 @@
     - @filled_jobs.each do |job|
       - if admin_signed_in? || job.published?
         = link_to job.title, job
+        -if job.blog_url
+          %br
+          =link_to job.blog_url, url_with_protocol(job.blog_url)
       - if admin_signed_in?
         .job-admin
           = link_to "Edit", edit_job_path(job)
