--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -7,6 +7,7 @@
           %li= msg
   = f.label "Click this checkbox if position has been filled: "
   = f.check_box :filled
+  = f.text_field :blog_url, :placeholder => "External blog Link (optional)", :size => 10
   = f.text_field :title, :placeholder => "Job Title"
   = f.text_area :description, :placeholder => "Job Description"
   = f.submit "Save"
