--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -9,8 +9,7 @@
         = link_to job.title, job
       - if admin_signed_in?
         .job-admin
-          = link_to "Edit", edit_job_path(job)
-          = link_to("Publish", publish_job_path(job), :method => :put) unless job.published?
+          = render :partial => "publisheditlinks", :locals => {:job => job}
       %br
       %br
 
@@ -32,7 +31,6 @@
           =link_to job.blog_url, url_with_protocol(job.blog_url)
       - if admin_signed_in?
         .job-admin
-          = link_to "Edit", edit_job_path(job)
-          = link_to("Publish", publish_job_path(job), :method => :put) unless job.published?
+          = render :partial => "publisheditlinks", :locals => {:job => job}
       %br
       %br
