--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,5 +2,6 @@
 %section.primary.wall-of-text
   %h2 Blog
   = render :partial => "post", :locals => {:post => @post, :preview => false }
+  = render :partial => "share_buttons"
   %section#comments
     = render :partial => "comments"
