start of new markup for new design - have a few screenshots of new elements as placeholders, these screenshots are NOT the final images, Gil and Mike will help with those later

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -166,3 +166,8 @@ a {
     background-color: rgba(0, 0, 0, 0.1);
     padding: 2em 2em 1em 2em;
 }
+
+.section-title {
+    font-size: large;
+    font-weight: bold;
+}
