--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,33 +1,66 @@
-%section#main-feature
-  #text-wrapper
-    %h2 Featured Client
-  %article.quote
-    Well done. The new version is everything I had hoped it would be.
-    %span.credit -- Jim Fishkin, Stanford Center for Deliberative Democracy
-    =link_to "Reframe It", "http://www.reframeit.com"
+%section#blueprint-image{:style => "text-align: center"}
+  = image_tag "temp_images/rocket.png"
 %section#tagline
   %article
-    We build
-    %em
-      amazing
-    web apps for:
+    From Idea to Execution
+  #tagline-body
+    Here at Coshx we take complex problems and turn them into simple solutions. Our highly skilled team of programmers and designers will take your product to the next level. We love sending those rockets to the moon - why not let us launch a rocket of a product for you  
+
+  .button-link{:style => "font-size:50%"}
+    Read about how we build for the web
+
 #features
   %section#startups
     %article
-      %h3 Startups
-      %p Coshx Labs builds top-notch web applications quickly and will crank out new features as fast as you can dream them up.
+      %h3 Coshx Labs Company
+      %p  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+      .button-link
+        About us
 
   %section#enterprise
     %article
-      %h3 Enterprise
-      %p As former enterprise employees, we know how difficult it can be to overcome institutional inertia and drive technical change.  Let us show your colleagues how nicely Rails can fit into your organization.
+      %h3 Coshx Labs Services
+      %p  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+      .button-link
+        Our services
 
   %section#you
-    %article
-      #title
-        %h3 You
-        %p Our clients love us, and you will too.  Let’s pair up and get that backlog under control.
+    %article      
+      %h3 Coshx Labs Products
+      %p  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
--#%section#activity-stream
--#  %h4 Activity Stream
--#
+      .button-link
+        Our projects
+
+%section#contact-us{:style => "text-align:center"}
+  .envelope
+    = image_tag "temp_images/envelope.png"
+  .contact-title
+    Don't be shy, say hello
+  .contact-body
+    Meet the team and find out why we're different and so on...
+  .contact-links
+    .button-link
+      Contact us
+    .white-button-link
+      Request a FREE quote
+
+%section#featured-projects
+  .section-title
+    Featured Projects
+  .section-content
+    COMING SOON!
+
+%section#our-clients
+  .section-title
+    Our Clients
+  .section-content
+    COMING SOON!
+
+%section#blog-posts
+  .section-title
+    Latest Blog Posts
+  .section-content
+    COMING SOON!
