--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,14 @@
 %header
   %h1=link_to "coshx", :root, :id => "logo"
   %nav#main
-    %ul
-      %li=link_to "services", :services
-      %li=link_to "portfolio", :portfolio
-      %li=link_to "about", :about
-      %li=link_to "blog", :blog_posts
+    #social-banner{:style => "float: right;"}
+      -# TODO: this is the Twitter/FB like thing in the upper-right
+      = image_tag "temp_images/social_banner.png"
+    %ul#nav-list
+      -# TODO: fix links depending on how we arrange the site - one big site or multiple small ones 
+      %li=link_to "Home", "#"
+      %li=link_to "About Us", :about
+      %li=link_to "Our Projects", "#projects"
+      %li=link_to "Our Services", :services
+      %li=link_to "Our Blog", :blog_posts
+      %li=link_to "Contact Us", "#contact"
